add ds store to gitignore

--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Simple Online Car Game</title>
+    <title>Emotion Race</title>
     <style>
       body, html {
         margin: 0;
