Add basic emoji

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <body>
     <div class="main">
       <video id="video" width="720" height="560" autoplay muted></video>
+      <h2 id="emoji"></h2>
     </div>
   </body>
 </html>
