--- a/client/index.html
+++ b/client/index.html
@@ -11,7 +11,9 @@
     </style>
   </head>
   <body>
+      <div id = "phaser">
     <script src="../vendor/phaser.min.js"></script>
     <script src="https://simple-car-game.herokuapp.com/socket.io/socket.io.js"></script>
+    </div>
   </body>
 </html>
