add spacemen,galaxy,star and 2 more controls

--- a/client/index.html
+++ b/client/index.html
@@ -17,7 +17,7 @@
             <li><video id="video" width="266" height="200" autoplay muted></video> </li>
             <li><h2 id="emoji"></h2></li>
             <li>
-              <div id="controls" ">
+              <div id="controls">
                   <!-- <div style="flex-direction:row; display: flex; justify-content: space-between;">
                   <h3>Move Right:</h3>
                   <h4>Smile</h4>
@@ -28,11 +28,11 @@
                 </div> -->
                 <div style="flex-direction:row; display: flex; justify-content: space-between;">
                   <h3>Move Forward:</h3>
-                  <h4>Be sad</h4>
+                  <h3>Be sad</h3>
                 </div>
                 <div style="flex-direction:row; display: flex; justify-content: space-between;">
                   <h3>Move Backward:</h3>
-                  <h4>be happy</h4>
+                  <h3>be happy</h3>
                 </div>
             </li>
           </ul>     
