--- a/client/index.html
+++ b/client/index.html
@@ -1,46 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie+edge" />
-    <script src="//cdn.jsdelivr.net/npm/phaser@3.11.0/dist/phaser.js"></script>
-    <script defer src="../vendor/face-api.min.js"></script>
-    <script defer src="../vendor/script.js"></script>
-    <title>Funny Game</title>
-    <link type="text/css" href="../vendor/style.css" rel="stylesheet" />
-  </head>
-  <body>
-    <div class="main">
-        <div class="panel">
-          <ul>
-            <li><video id="video" width="266" height="200" autoplay muted></video> </li>
-            <li><h2 id="emoji"></h2></li>
-            <li>
-              <div id="controls">
-                  <!-- <div style="flex-direction:row; display: flex; justify-content: space-between;">
-                  <h3>Move Right:</h3>
-                  <h4>Smile</h4>
-                </div>
-                <div style="flex-direction:row; display: flex; justify-content: space-between;">
-                  <h3>Move Left:</h3>
-                  <h4>Grin</h4>
-                </div> -->
-                <div style="flex-direction:row; display: flex; justify-content: space-between;">
-                  <h3>Move Forward:</h3>
-                  <h3>Be sad</h3>
-                </div>
-                <div style="flex-direction:row; display: flex; justify-content: space-between;">
-                  <h3>Move Backward:</h3>
-                  <h3>be happy</h3>
-                </div>
-            </li>
-          </ul>     
-        </div>
-        <div class="game">
-            <script src="../vendor/phaser.min.js"></script>
-            <script src="https://simple-car-game.herokuapp.com/socket.io/socket.io.js"></script>
-          </div>
-        </div>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie+edge" />
+  <script src="//cdn.jsdelivr.net/npm/phaser@3.11.0/dist/phaser.js"></script>
+  <script defer src="../vendor/face-api.min.js"></script>
+  <script defer src="../vendor/script.js"></script>
+  <title>Funny Game</title>
+  <link type="text/css" href="../vendor/style.css" rel="stylesheet" />
+  <link type="text/css" href="./style.css" rel="stylesheet" />
+</head>
+
+<body>
+  <!-- <div id="splashScreen" 
+  style="
+  position:fixed;
+  align-content:center;
+  background-color:darkblue;
+  opacity:0.6; 
+  z-index: 1;
+  width: 70%;
+  height:80%;
+  ">
+    <h1>Game Title</h1>
+    <input id="startButton" type="button" value="Start" style="
+    width: 40px;
+    bottom: 2%;
+    margin-left: 20%;
+    "/>
+  </div> -->
+
+  <div class="main">
+    <div class="panel">
+      <ul>
+        <li><video id="video" width="266" height="200" autoplay muted></video> </li>
+        <li>
+          <h2 id="emoji"></h2>
+        </li>
+        <li>
+          <div id="controls">
+            <div style="flex-direction:row; display: flex; justify-content: space-between;">
+              <h3>Move Right:</h3>
+              <h4>Smile</h4>
+            </div>
+            <div style="flex-direction:row; display: flex; justify-content: space-between;">
+              <h3>Move Left:</h3>
+              <h4>Grin</h4>
+            </div>
+            <div style="flex-direction:row; display: flex; justify-content: space-between;">
+              <h3>Move Forward:</h3>
+              <h3>Be sad</h3>
+            </div>
+            <div style="flex-direction:row; display: flex; justify-content: space-between;">
+              <h3>Move Backward:</h3>
+              <h3>be happy</h3>
+            </div>
+        </li>
+      </ul>
+    </div>
+    <div class="game">
+      <script src="../vendor/phaser.min.js"></script>
+      <script src="https://simple-car-game.herokuapp.com/socket.io/socket.io.js"></script>
+    </div>
+  </div>
+</body>
+
 </html>
